--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <artifactId>junior</artifactId>
     <packaging>jar</packaging>
     <version>2.0</version>
-    <name>tracker</name>
+    <name>memTracker</name>
     <url>http://job4j.ru/</url>
 
     <properties>
@@ -52,6 +52,11 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
             <version>3.4.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.5.0</version>
         </dependency>
     </dependencies>
     <build>
