--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,14 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.4.1</version>
             </plugin>
+            <plugin>
+                <groupId>org.liquibase</groupId>
+                <artifactId>liquibase-maven-plugin</artifactId>
+                <version>4.15.0</version>
+                <configuration>
+                    <propertyFile>db/liquibase.properties</propertyFile>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
