--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,12 @@
             <version>2.1.214</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>3.5.13</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <profiles>
