--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,11 @@
             <version>1.18.22</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.6.11.Final</version>
+        </dependency>
     </dependencies>
 
     <profiles>
